# gamelistify

./: BACKLOG.md  README.md  build_linux.sh  build_win.cmd  config.py  folder_icon_manager.py  gamelist_parser.py  init_win.cmd  main.py  main_qt.py  pyproject.toml  requirements.txt  rom_scanner.py  scraper_bridge.py  settings.py
gamelistify/: main.py  pyproject.toml
icons/: icon.pdn
icons/sources/: app_icon.psd
icons/sources/flags/: folders.psd
